// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> can render without children 1`] = `
<div
  className="f85st9h"
/>
`;

exports[`<Text /> renders bold 1`] = `
<div
  className="f2nao80"
>
  Bold
</div>
`;

exports[`<Text /> renders disabled 1`] = `
<div
  className="f3dbs5k"
>
  Disabled
</div>
`;

exports[`<Text /> renders inline 1`] = `
<span
  className="f1jbltt"
>
  Inline
</span>
`;

exports[`<Text /> renders inverted 1`] = `
<div
  className="fc07jjj"
>
  Inverted
</div>
`;

exports[`<Text /> renders large 1`] = `
<h4
  className="f15ktvug"
>
  Large
</h4>
`;

exports[`<Text /> renders light 1`] = `
<div
  className="f1ljjw5h"
>
  Light
</div>
`;

exports[`<Text /> renders micro 1`] = `
<small
  className="fgxgxs4"
>
  Micro
</small>
`;

exports[`<Text /> renders muted 1`] = `
<div
  className="f1s6m494"
>
  Muted
</div>
`;

exports[`<Text /> renders small 1`] = `
<div
  className="f16is2dv"
>
  Small
</div>
`;

exports[`<Text /> renders uppercased 1`] = `
<div
  className="fo8uu26"
>
  Uppercased
</div>
`;

exports[`<Text /> renders with preserved whitespace 1`] = `
<div
  className="f134cnpw"
>
     
  Preserved whitespace
     
</div>
`;
